--- a/manifest.json
+++ b/manifest.json
@@ -4,15 +4,15 @@
     "name": "Ratings",
     "description": "Allow users to rate movies, series, and other media with a 1-10 star rating system. Features hover popup showing all user ratings with usernames.",
     "overview": "Comprehensive rating plugin with star-based UI, average ratings, and detailed user rating display on hover.",
-    "owner": "jellyfinratings",
+    "owner": "K3ntas",
     "category": "Metadata",
-    "imageUrl": "https://raw.githubusercontent.com/jellyfinratings/jellyfin-plugin-ratings/main/images/logo.png",
+    "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
         "version": "1.0.0.0",
         "changelog": "Initial release with 1-10 star rating system, hover popup with usernames, rating statistics, and configuration page.",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/jellyfinratings/jellyfin-plugin-ratings/releases/download/v1.0.0.0/jellyfin-plugin-ratings_1.0.0.0.zip",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.0.0/jellyfin-plugin-ratings_1.0.0.0.zip",
         "checksum": "00000000000000000000000000000000",
         "timestamp": "2024-11-12T00:00:00Z"
       }
