--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.2.0",
+        "changelog": "Improved plugin logo with better visibility and professional design.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.2.0/jellyfin-plugin-ratings_1.0.2.0.zip",
+        "checksum": "f09e59e253e46dfd6a602e790aeb15b7",
+        "timestamp": "2025-11-12T01:02:03Z"
+      },
+      {
         "version": "1.0.1.0",
         "changelog": "Fixed JavaScript injection for rating UI to appear on media pages. Added plugin logo.",
         "targetAbi": "10.11.0.0",
