--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.3.0",
+        "changelog": "CRITICAL FIX: JavaScript now properly served. Update Custom CSS to use /Ratings/ratings.js",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.3.0/jellyfin-plugin-ratings_1.0.3.0.zip",
+        "checksum": "5933b2b5a9b7d8ef0744bbf6a023077c",
+        "timestamp": "2025-11-12T10:02:35Z"
+      },
+      {
         "version": "1.0.2.0",
         "changelog": "Improved plugin logo with better visibility and professional design.",
         "targetAbi": "10.11.0.0",
