--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.4.0",
+        "changelog": "Fixed script endpoint - moved to RatingsController. Should now work!",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.4.0/jellyfin-plugin-ratings_1.0.4.0.zip",
+        "checksum": "387c4ee5bba6c566c60888095466aef1",
+        "timestamp": "2025-11-12T10:10:00Z"
+      },
+      {
         "version": "1.0.3.0",
         "changelog": "CRITICAL FIX: JavaScript now properly served. Update Custom CSS to use /Ratings/ratings.js",
         "targetAbi": "10.11.0.0",
