--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.13.0",
+        "changelog": "AUTHENTICATION FIX! Uses ApiClient.ajax() for automatic auth handling. Fixes 401 errors when submitting ratings.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.13.0/jellyfin-plugin-ratings_1.0.13.0.zip",
+        "checksum": "50f2b05eaecbd9fdd8e82ab60f14d026",
+        "timestamp": "2025-11-16T03:15:00Z"
+      },
+      {
         "version": "1.0.12.0",
         "changelog": "WORKING! Fixed UI placement and authentication (401 errors). Rating component now appears correctly and submissions work.",
         "targetAbi": "10.11.0.0",
