--- a/manifest.json
+++ b/manifest.json
@@ -10,15 +10,15 @@
     "versions": [
       {
         "version": "1.0.13.0",
-        "changelog": "AUTHENTICATION FIX! Uses ApiClient.ajax() for automatic auth handling. Fixes 401 errors when submitting ratings.",
+        "changelog": "Resolved authentication issues by implementing ApiClient.ajax() for automatic credential handling. Addresses HTTP 401 errors during rating submissions.",
         "targetAbi": "10.11.0.0",
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.13.0/jellyfin-plugin-ratings_1.0.13.0.zip",
-        "checksum": "50f2b05eaecbd9fdd8e82ab60f14d026",
+        "checksum": "663414fb4852909f2f6a2b581145e85d",
         "timestamp": "2025-11-16T03:15:00Z"
       },
       {
         "version": "1.0.12.0",
-        "changelog": "WORKING! Fixed UI placement and authentication (401 errors). Rating component now appears correctly and submissions work.",
+        "changelog": "Improved UI component placement and authentication handling. Rating interface now displays correctly on detail pages.",
         "targetAbi": "10.11.0.0",
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.12.0/jellyfin-plugin-ratings_1.0.12.0.zip",
         "checksum": "793032c277f12aa3281cbdec4937d2b6",
@@ -26,7 +26,7 @@
       },
       {
         "version": "1.0.11.0",
-        "changelog": "DEBUG: Enhanced URL detection (hash/query/path patterns) + extensive console logging for debugging initialization and page detection issues.",
+        "changelog": "Enhanced URL pattern detection with support for hash-based, query string, and path-based routing. Added comprehensive console logging for troubleshooting.",
         "targetAbi": "10.11.0.0",
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.11.0/jellyfin-plugin-ratings_1.0.11.0.zip",
         "checksum": "e9871245110adb60e7f6a1a564c7c879",
