--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.14.0",
+        "changelog": "Corrected authentication implementation using X-Emby-Token header with ApiClient.accessToken() method. Resolves persistent HTTP 401 errors.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.14.0/jellyfin-plugin-ratings_1.0.14.0.zip",
+        "checksum": "3882fb18a6a1142da7757107bf200bbf",
+        "timestamp": "2025-11-16T03:30:00Z"
+      },
+      {
         "version": "1.0.13.0",
         "changelog": "Resolved authentication issues by implementing ApiClient.ajax() for automatic credential handling. Addresses HTTP 401 errors during rating submissions.",
         "targetAbi": "10.11.0.0",
