--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.18.0",
+        "changelog": "Fixed authentication by including credentials and X-Emby-Token header in fetch requests. Ensures proper cookie-based authentication with Jellyfin server.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.18.0/jellyfin-plugin-ratings_1.0.18.0.zip",
+        "checksum": "8adc608ae1323b631514ff2b0df34b24",
+        "timestamp": "2025-11-16T09:45:00Z"
+      },
+      {
         "version": "1.0.17.0",
         "changelog": "Fixed authentication using api_key query parameter method. Passes access token directly in URL for proper request authentication.",
         "targetAbi": "10.11.0.0",
