--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.19.0",
+        "changelog": "Implemented proper MediaBrowser Authorization header format with api_key parameter. Uses complete authentication pattern required by Jellyfin API.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.19.0/jellyfin-plugin-ratings_1.0.19.0.zip",
+        "checksum": "25430af4c9693af8ed7b9085729f433a",
+        "timestamp": "2025-11-16T10:00:00Z"
+      },
+      {
         "version": "1.0.18.0",
         "changelog": "Fixed authentication by including credentials and X-Emby-Token header in fetch requests. Ensures proper cookie-based authentication with Jellyfin server.",
         "targetAbi": "10.11.0.0",
