--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.20.0",
+        "changelog": "Corrected authentication to use ONLY Authorization header with MediaBrowser format. Removed conflicting api_key query parameter per Jellyfin API requirements.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.20.0/jellyfin-plugin-ratings_1.0.20.0.zip",
+        "checksum": "c592ee83c8d25c90ffd3efcbda17b907",
+        "timestamp": "2025-11-16T10:15:00Z"
+      },
+      {
         "version": "1.0.19.0",
         "changelog": "Implemented proper MediaBrowser Authorization header format with api_key parameter. Uses complete authentication pattern required by Jellyfin API.",
         "targetAbi": "10.11.0.0",
