--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.21.0",
+        "changelog": "Fixed authentication using X-Emby-Authorization header (Jellyfin's dedicated auth header). Added comprehensive debug logging to diagnose authentication issues.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.21.0/jellyfin-plugin-ratings_1.0.21.0.zip",
+        "checksum": "d1a6bd946ef6c036b27829a27292815b",
+        "timestamp": "2025-11-16T10:30:00Z"
+      },
+      {
         "version": "1.0.20.0",
         "changelog": "Corrected authentication to use ONLY Authorization header with MediaBrowser format. Removed conflicting api_key query parameter per Jellyfin API requirements.",
         "targetAbi": "10.11.0.0",
