--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.22.0",
+        "changelog": "Implemented manual token authentication in controller. Removed [Authorize] attribute and added session-based token validation for proper authentication handling.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.22.0/jellyfin-plugin-ratings_1.0.22.0.zip",
+        "checksum": "57625927f63907d1c4c73e2b02ac0756",
+        "timestamp": "2025-11-16T10:45:00Z"
+      },
+      {
         "version": "1.0.21.0",
         "changelog": "Fixed authentication using X-Emby-Authorization header (Jellyfin's dedicated auth header). Added comprehensive debug logging to diagnose authentication issues.",
         "targetAbi": "10.11.0.0",
