--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
+        "version": "1.0.23.0",
+        "changelog": "Added instant star display feedback when submitting ratings. Stars now immediately highlight to show selected rating before server confirmation.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.23.0/jellyfin-plugin-ratings_1.0.23.0.zip",
+        "checksum": "a3498fdb5ba6d4236969a3327ae04f38",
+        "timestamp": "2025-11-16T11:00:00Z"
+      },
+      {
         "version": "1.0.22.0",
         "changelog": "Implemented manual token authentication in controller. Removed [Authorize] attribute and added session-based token validation for proper authentication handling.",
         "targetAbi": "10.11.0.0",
