--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
-        "version": "1.0.52.0",
-        "changelog": "HOTFIX: Improved folder card detection using data-isfolder attribute and hash-based routing patterns. Rating overlays now properly excluded from all library folders.",
+        "version": "1.0.53.0",
+        "changelog": "Fixed plugin loading delay on detail pages. Improved element detection from 3s to 100ms intervals for faster rating UI injection. Added professional screenshots to documentation.",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.52.0/jellyfin-plugin-ratings_1.0.52.0.zip",
-        "checksum": "be23c514e2b2d8fdd96ea7c30a06ec16",
-        "timestamp": "2025-11-17T09:30:00Z"
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.53.0/jellyfin-plugin-ratings_1.0.53.0.zip",
+        "checksum": "1ccd775017eff9166fdad174682df17e",
+        "timestamp": "2025-11-17T10:00:00Z"
       }
     ]
   }
