--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
-        "version": "1.0.54.0",
-        "changelog": "Fixed plugin not loading during navigation. Added hashchange and popstate event listeners for reliable SPA routing detection. Plugin now loads correctly when navigating between media items without manual refresh.",
+        "version": "1.0.55.0",
+        "changelog": "Improved navigation detection with aggressive polling. Added 500ms interval checking for URL changes to ensure plugin loads on all navigation types. Enhanced compatibility with Jellyfin's SPA routing.",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.54.0/jellyfin-plugin-ratings_1.0.54.0.zip",
-        "checksum": "490dd0f721f411e1aeff8cf8153a526b",
-        "timestamp": "2025-11-17T10:30:00Z"
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.55.0/jellyfin-plugin-ratings_1.0.55.0.zip",
+        "checksum": "fa29907147216555736628d034523da2",
+        "timestamp": "2025-11-17T11:00:00Z"
       }
     ]
   }
