--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
     "versions": [
       {
-        "version": "1.0.55.0",
-        "changelog": "Improved navigation detection with aggressive polling. Added 500ms interval checking for URL changes to ensure plugin loads on all navigation types. Enhanced compatibility with Jellyfin's SPA routing.",
+        "version": "1.0.56.0",
+        "changelog": "Moved rating badge to top-left corner to avoid conflict with series episode count badges. Rating badges now display correctly on all media types including TV series.",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.55.0/jellyfin-plugin-ratings_1.0.55.0.zip",
-        "checksum": "fa29907147216555736628d034523da2",
-        "timestamp": "2025-11-17T11:00:00Z"
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.56.0/jellyfin-plugin-ratings_1.0.56.0.zip",
+        "checksum": "5d7940dd9f5918b1701235009b570013",
+        "timestamp": "2025-11-17T11:30:00Z"
       }
     ]
   }
