Added cache-busting parameter to logo URL to force refresh

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "overview": "Comprehensive rating plugin with star-based UI, average ratings display, detailed user rating popups, and performance-optimized card overlays for large media libraries.",
     "owner": "K3ntas",
     "category": "Metadata",
-    "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg",
+    "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=2",
     "versions": [
       {
         "version": "1.0.61.0",
