--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.71.0",
+        "changelog": "Mobile responsive! Request Media button now 70% smaller on mobile devices (screens under 768px), positioned to the right for better fit. Desktop unchanged.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.71.0/jellyfin-plugin-ratings_1.0.71.0.zip",
+        "checksum": "685fb6d9b15a618d84bd874b28bfe5d4",
+        "timestamp": "2025-11-21T09:30:00Z"
+      },
+      {
         "version": "1.0.70.0",
         "changelog": "Perfect positioning (top: 8px), working shine animation with gradient sweep, smart badge that disappears when you view completed requests! All polished and working smoothly.",
         "targetAbi": "10.11.0.0",
