--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.73.0",
+        "changelog": "Animation fix v2: Removed box-shadow conflict, fixed transition property, added vendor prefixes for webkit/moz/o. Animations should now work properly!",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.73.0/jellyfin-plugin-ratings_1.0.73.0.zip",
+        "checksum": "eb0a6ff36763e001bc19ececf3bfd28c",
+        "timestamp": "2025-11-21T10:20:00Z"
+      },
+      {
         "version": "1.0.72.0",
         "changelog": "Fixed shine animation! Removed invalid !important from @keyframes. Mobile button repositioned to right: 190px with border-radius: 15px.",
         "targetAbi": "10.11.0.0",
