--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.75.0",
+        "changelog": "Full request management! Delete requests, timestamps (requested/completed), media link input for admins. Users see timestamps and 'Watch Now' button when request is fulfilled!",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.75.0/jellyfin-plugin-ratings_1.0.75.0.zip",
+        "checksum": "5c8cf750021c80e13cc0d99460fa035c",
+        "timestamp": "2025-11-21T11:15:00Z"
+      },
+      {
         "version": "1.0.74.0",
         "changelog": "Mobile-friendly admin table! Card layout on mobile, dropdown select for status changes instead of 3 buttons. Modal now 95% width on mobile for better viewing.",
         "targetAbi": "10.11.0.0",
