--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.76.0",
+        "changelog": "Login page fix! Button hides on login/startup pages. Cache clears on logout and account switch to prevent stale data between users.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.76.0/jellyfin-plugin-ratings_1.0.76.0.zip",
+        "checksum": "f5b7aefcb4f7241153b02635f0e74082",
+        "timestamp": "2025-11-21T11:50:00Z"
+      },
+      {
         "version": "1.0.75.0",
         "changelog": "Full request management! Delete requests, timestamps (requested/completed), media link input for admins. Users see timestamps and 'Watch Now' button when request is fulfilled!",
         "targetAbi": "10.11.0.0",
