--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.77.0",
+        "changelog": "Fixed button initialization! Retry logic for SPA navigation, smarter login page detection that doesn't block logged-in users. No more Ctrl+Shift+R needed!",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.77.0/jellyfin-plugin-ratings_1.0.77.0.zip",
+        "checksum": "7c682a72922f07872193910d6bc75b8e",
+        "timestamp": "2025-11-21T15:30:00Z"
+      },
+      {
         "version": "1.0.76.0",
         "changelog": "Login page fix! Button hides on login/startup pages. Cache clears on logout and account switch to prevent stale data between users.",
         "targetAbi": "10.11.0.0",
