--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.78.0",
+        "changelog": "Watch Now button now shows for admins too! Updated README with full Request Media documentation and screenshots.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.78.0/jellyfin-plugin-ratings_1.0.78.0.zip",
+        "checksum": "6cd69066f613ace95c71879256008098",
+        "timestamp": "2025-11-21T18:30:00Z"
+      },
+      {
         "version": "1.0.77.0",
         "changelog": "Fixed button initialization! Retry logic for SPA navigation, smarter login page detection that doesn't block logged-in users. No more Ctrl+Shift+R needed!",
         "targetAbi": "10.11.0.0",
