--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.79.0",
+        "changelog": "Netflix-Style View! Enable in plugin settings to display libraries with horizontal genre rows like Netflix. Movies and TV shows organized by genre with smooth scrolling.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.79.0/jellyfin-plugin-ratings_1.0.79.0.zip",
+        "checksum": "adc65a516c15386bfe5026e1e6e9320e",
+        "timestamp": "2025-11-21T19:00:00Z"
+      },
+      {
         "version": "1.0.78.0",
         "changelog": "Watch Now button now shows for admins too! Updated README with full Request Media documentation and screenshots.",
         "targetAbi": "10.11.0.0",
