--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.80.0",
+        "changelog": "Netflix View fix! Improved URL detection for #/movies and #/tv pages with topParentId parameter.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.80.0/jellyfin-plugin-ratings_1.0.80.0.zip",
+        "checksum": "f20a0876c0710f050075ead6add689e3",
+        "timestamp": "2025-11-21T19:15:00Z"
+      },
+      {
         "version": "1.0.79.0",
         "changelog": "Netflix-Style View! Enable in plugin settings to display libraries with horizontal genre rows like Netflix. Movies and TV shows organized by genre with smooth scrolling.",
         "targetAbi": "10.11.0.0",
