--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.81.0",
+        "changelog": "DEBUG: Netflix View with console logging to diagnose issues.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.81.0/jellyfin-plugin-ratings_1.0.81.0.zip",
+        "checksum": "ce0d2c5fe3a4d30a7207f5bdfc6e6bad",
+        "timestamp": "2025-11-21T19:30:00Z"
+      },
+      {
         "version": "1.0.80.0",
         "changelog": "Netflix View fix! Improved URL detection for #/movies and #/tv pages with topParentId parameter.",
         "targetAbi": "10.11.0.0",
