--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=3",
     "versions": [
       {
+        "version": "1.0.82.0",
+        "changelog": "Fixed crash on init! Emby.Page.addEventListener compatibility fix for Jellyfin 10.11. Netflix View should now work.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.82.0/jellyfin-plugin-ratings_1.0.82.0.zip",
+        "checksum": "fa365c5ea9416c1cfa0aab99aaa04215",
+        "timestamp": "2025-11-21T19:45:00Z"
+      },
+      {
         "version": "1.0.81.0",
         "changelog": "DEBUG: Netflix View with console logging to diagnose issues.",
         "targetAbi": "10.11.0.0",
