--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,16 @@
     "overview": "Comprehensive rating plugin with star-based UI, average ratings display, detailed user rating popups, and performance-optimized card overlays for large media libraries.",
     "owner": "K3ntas",
     "category": "Metadata",
-    "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=5",
+    "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
+      {
+        "version": "1.0.93.0",
+        "changelog": "Fixed logo aspect ratio to match Jellyfin plugin container (16:9).",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.93.0/jellyfin-plugin-ratings_1.0.93.0.zip",
+        "checksum": "bb4583aa8087a8444b872a09610cb6c6",
+        "timestamp": "2025-11-22T15:00:00Z"
+      },
       {
         "version": "1.0.92.0",
         "changelog": "Simplified plugin logo SVG for better compatibility. Fixed plugin logo display.",
