--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.94.0",
+        "changelog": "Added search field in header! Search directly from homepage and all pages without navigating to search page first.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.94.0/jellyfin-plugin-ratings_1.0.94.0.zip",
+        "checksum": "396d3282afe73d2f2a9a752b17f62b5f",
+        "timestamp": "2025-11-22T16:00:00Z"
+      },
+      {
         "version": "1.0.93.0",
         "changelog": "Fixed logo aspect ratio to match Jellyfin plugin container (16:9).",
         "targetAbi": "10.11.0.0",
