--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.95.0",
+        "changelog": "Live search filtering! Type to instantly filter movies/series on current page. Icon changes to X when typing - click to clear.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.95.0/jellyfin-plugin-ratings_1.0.95.0.zip",
+        "checksum": "c7e7db837a8753fb0c2d02f8750994cf",
+        "timestamp": "2025-11-22T17:00:00Z"
+      },
+      {
         "version": "1.0.94.0",
         "changelog": "Added search field in header! Search directly from homepage and all pages without navigating to search page first.",
         "targetAbi": "10.11.0.0",
