--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.96.0",
+        "changelog": "Fixed search filtering on Movies/TV Shows library pages. Improved card detection with better selectors and title extraction.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.96.0/jellyfin-plugin-ratings_1.0.96.0.zip",
+        "checksum": "e48fd6a2790e66572d1c14b99b65c9ed",
+        "timestamp": "2025-11-22T18:00:00Z"
+      },
+      {
         "version": "1.0.95.0",
         "changelog": "Live search filtering! Type to instantly filter movies/series on current page. Icon changes to X when typing - click to clear.",
         "targetAbi": "10.11.0.0",
