--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.97.0",
+        "changelog": "Fixed search on Netflix view pages! Now filters Netflix-style cards correctly. Works on all library pages.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.97.0/jellyfin-plugin-ratings_1.0.97.0.zip",
+        "checksum": "42d06ab547bf92ab8d49ea4b2d8d8cca",
+        "timestamp": "2025-11-22T19:00:00Z"
+      },
+      {
         "version": "1.0.96.0",
         "changelog": "Fixed search filtering on Movies/TV Shows library pages. Improved card detection with better selectors and title extraction.",
         "targetAbi": "10.11.0.0",
