--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.98.0",
+        "changelog": "Auto-clear search on page navigation! Search field now clears when you navigate to a different page.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.98.0/jellyfin-plugin-ratings_1.0.98.0.zip",
+        "checksum": "0944ae4d38e2c8ebd0a665dcede41f2c",
+        "timestamp": "2025-11-22T20:00:00Z"
+      },
+      {
         "version": "1.0.97.0",
         "changelog": "Fixed search on Netflix view pages! Now filters Netflix-style cards correctly. Works on all library pages.",
         "targetAbi": "10.11.0.0",
