--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.99.0",
+        "changelog": "Fixed auto-clear for SPA navigation! Now monitors URL changes every 500ms to detect page changes in single-page app.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.99.0/jellyfin-plugin-ratings_1.0.99.0.zip",
+        "checksum": "d11359c2de33e39bf1c04c41fbf58ed8",
+        "timestamp": "2025-11-22T21:00:00Z"
+      },
+      {
         "version": "1.0.98.0",
         "changelog": "Auto-clear search on page navigation! Search field now clears when you navigate to a different page.",
         "targetAbi": "10.11.0.0",
