--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.100.0",
+        "changelog": "Removed all debug console.log statements for cleaner browser console. Plugin now runs silently without logging.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.100.0/jellyfin-plugin-ratings_1.0.100.0.zip",
+        "checksum": "9069e8422f2d0d2098c27fc0cf6e51fa",
+        "timestamp": "2025-11-22T22:00:00Z"
+      },
+      {
         "version": "1.0.99.0",
         "changelog": "Fixed auto-clear for SPA navigation! Now monitors URL changes every 500ms to detect page changes in single-page app.",
         "targetAbi": "10.11.0.0",
