--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.127.0",
+        "changelog": "Search fixes! Fixed card images not loading in search results. Auto-clears search results when navigating away from homepage. Search now works correctly after returning to homepage.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.127.0/jellyfin-plugin-ratings_1.0.127.0.zip",
+        "checksum": "e5acea36ea0167459bef97adde4d5ee0",
+        "timestamp": "2025-11-23T12:00:00Z"
+      },
+      {
         "version": "1.0.126.0",
         "changelog": "Homepage Full Library Search! Search field on homepage now queries entire library using Jellyfin API instead of just filtering visible content. Results display as clickable cards.",
         "targetAbi": "10.11.0.0",
