--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.128.0",
+        "changelog": "Debug version with logging! Always recreates results container fresh. Added console logs to track search behavior. Please check browser console (F12) for 'RatingsPlugin:' messages.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.128.0/jellyfin-plugin-ratings_1.0.128.0.zip",
+        "checksum": "ade813298896614a6be27480d1d6e6c8",
+        "timestamp": "2025-11-23T12:30:00Z"
+      },
+      {
         "version": "1.0.127.0",
         "changelog": "Search fixes! Fixed card images not loading in search results. Auto-clears search results when navigating away from homepage. Search now works correctly after returning to homepage.",
         "targetAbi": "10.11.0.0",
