--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.130.0",
+        "changelog": "Visibility fix! Forced results container to display with explicit CSS: display:block, visibility:visible, opacity:1, z-index:1000. Should now be visible after navigation!",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.130.0/jellyfin-plugin-ratings_1.0.130.0.zip",
+        "checksum": "7906bd168fba7a1b99e63ea8c12986e7",
+        "timestamp": "2025-11-23T13:30:00Z"
+      },
+      {
         "version": "1.0.129.0",
         "changelog": "Extended debug logging! Logs homepage sections count, HTML building, and results visibility. Check console for detailed diagnostics.",
         "targetAbi": "10.11.0.0",
