--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.132.0",
+        "changelog": "Fixed header scrolling with Netflix genre view. Header now stays fixed at top when scrolling through genre rows.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.132.0/jellyfin-plugin-ratings_1.0.132.0.zip",
+        "checksum": "664bb69d7ac21e2dfc9ab7554b16a9a3",
+        "timestamp": "2025-12-14T12:00:00Z"
+      },
+      {
         "version": "1.0.131.0",
         "changelog": "Major fix! Changed results container to fixed position overlay appended to body instead of mainAnimatedPage. Added MutationObserver to detect style modifications. Added delayed visibility checks. Should finally work after navigation!",
         "targetAbi": "10.11.0.0",
