--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.133.0",
+        "changelog": "Removed double scrollbar issue. Only Netflix container scrolls now, body/html overflow hidden when genre view active.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.133.0/jellyfin-plugin-ratings_1.0.133.0.zip",
+        "checksum": "ef555b712b3fd5d6e4909d6268abe52f",
+        "timestamp": "2025-12-14T12:30:00Z"
+      },
+      {
         "version": "1.0.132.0",
         "changelog": "Fixed header scrolling with Netflix genre view. Header now stays fixed at top when scrolling through genre rows.",
         "targetAbi": "10.11.0.0",
