--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.160.0",
+        "changelog": "Notification toggle moved to LEFT of search field. Added hover tooltip explaining the toggle function.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.160.0/jellyfin-plugin-ratings_1.0.160.0.zip",
+        "checksum": "c7db2723983934b55f99feccf9d00e77",
+        "timestamp": "2025-12-27T02:00:00Z"
+      },
+      {
         "version": "1.0.159.0",
         "changelog": "Fixed notification toggle position - now correctly placed between search field and request button.",
         "targetAbi": "10.11.0.0",
