Dev v2.0.4.0 - Downgrade packages for 10.11.x compatibility
- Downgrade Jellyfin.Controller/Model to 10.11.0 (from 10.11.6)
- Add Dependabot ignore rules for Jellyfin packages
- Prevents future auto-updates that break server compatibility

Supports Jellyfin 10.11.0 and newer.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,8 @@ updates:
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
+    ignore:
+      # Jellyfin packages must stay at 10.11.0 for broad server compatibility
+      # Only update manually when ready to drop support for older servers
+      - dependency-name: "Jellyfin.Controller"
+      - dependency-name: "Jellyfin.Model"
