--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
-        "version": "2.0.3.0",
-        "changelog": "Dev release: Fix blocking .Result/.Wait() calls - convert to async/await for improved stability. Server-side GIF proxy for API key security.",
-        "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.3.0/jellyfin-plugin-ratings_2.0.3.0.zip",
-        "checksum": "8eec88d4154c6942214cdd6b295fce8a",
-        "timestamp": "2026-02-19T19:30:00Z"
+        "version": "2.0.4.0",
+        "changelog": "Dev release: Async/await stability fixes, server-side GIF proxy. Downgraded packages for Jellyfin 10.11.x compatibility.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.4.0/jellyfin-plugin-ratings_2.0.4.0.zip",
+        "checksum": "5f9b666cf8600acc24f58b30fab90769",
+        "timestamp": "2026-02-19T20:00:00Z"
       }
     ]
   }
