Dev v2.0.8.0 - Fix Klipy API URL format
- Use correct Klipy API URL: api.klipy.com/api/v1/{key}/gifs/search
- Fix response parsing for Klipy's nested data.data[] format
- Extract URLs from file.{size}.gif.url structure

--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
-        "version": "2.0.7.0",
-        "changelog": "Fix: GIF search now supports both Tenor and Klipy APIs with fallback",
+        "version": "2.0.8.0",
+        "changelog": "Fix: Correct Klipy API URL format (api.klipy.com/api/v1/{key}/gifs/search)",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.7.0/jellyfin-plugin-ratings_2.0.7.0.zip",
-        "checksum": "b631b29908ec1c82ad5768e0a77a93e0",
-        "timestamp": "2026-02-19T22:00:00Z"
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.8.0/jellyfin-plugin-ratings_2.0.8.0.zip",
+        "checksum": "0584708f4506db379fd0a67340be1d8a",
+        "timestamp": "2026-02-19T22:30:00Z"
       }
     ]
   }
