Add workflow/plan files to .gitignore, remove release_workflow_dev.md from tracking
- release_workflow*.md, *_plan.md, *_workflow.md are now local-only files
- These development docs should never be pushed to main or dev

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 *.zip
+
+# Development documentation (local only, never push)
+release_workflow*.md
+*_plan.md
+*_workflow.md
